--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,16 +17,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-
-  <title>Vuidget</title>
+  <title>Bancor</title>
 </head>
-
 <body>
   <noscript>
     <strong>We're sorry but Vuidget doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
-  <bancor-widget title="Bancor" />
+  <bancor-widget buttoncolor='#F44336' widgetcolor='#F44336' />
 </body>
-
 </html>
